--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,13 @@
 version: '3.8'
 
 services:
-  # --- 1. Base de Données ---
   postgres-db:
     image: postgres:15
     container_name: school_db_container
     environment:
-      - POSTGRES_DB=school_db
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=seif
+      POSTGRES_DB: school_db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: seif
     ports:
       - "5432:5432"
     volumes:
@@ -21,25 +20,38 @@ services:
       timeout: 5s
       retries: 5
 
-  # --- 2. Backend Spring Boot ---
   backend-app:
-    build: .  # Utilise le Dockerfile à la racine
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: school_backend
     ports:
       - "8086:8086"
     depends_on:
       postgres-db:
-        condition: service_healthy # Attend que la BDD soit prête
+        condition: service_healthy
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-db:5432/school_db
-      - SPRING_DATASOURCE_USERNAME=postgres
-      - SPRING_DATASOURCE_PASSWORD=seif
-      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-db:5432/school_db
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: seif
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+    networks:
+      - school-network
+
+  frontend-app:
+    build:
+      context: ../relead-school-front
+      dockerfile: Dockerfile
+    container_name: school_frontend
+    ports:
+      - "4200:80"
+    depends_on:
+      - backend-app
     networks:
       - school-network
 
 volumes:
-  pg_data: # On ne garde que le volume de la BDD
+  pg_data:
 
 networks:
   school-network:
