--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,7 @@ services:
       retries: 5
 
   backend-app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: seifeddinelamti/schoolmanagement_back:latest
     container_name: school_backend
     ports:
       - "8086:8086"
@@ -39,9 +37,7 @@ services:
       - school-network
 
   frontend-app:
-    build:
-      context: ../relead-school-front
-      dockerfile: Dockerfile
+    image: seifeddinelamti/schoolmanagement_front:latest
     container_name: school_frontend
     ports:
       - "4200:80"
